--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest . --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^26.5.3",
     "nodemon": "^2.0.5"
   },
   "dependencies": {
