--- a/osa5/bloglist-frontend/package.json
+++ b/osa5/bloglist-frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "cypress": "^5.4.0"
+    "cypress": "^5.4.0",
+    "sass-loader": "^10.0.4"
   }
 }
